--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
+    "react-bubbly-transitions": "^1.0.1",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
